--- a/index.html
+++ b/index.html
@@ -70,3 +70,16 @@
 <div>
 <strong>AkiHub</strong> — Minecraft Launchers Hub
 <p class="muted">Credits: logos & links belong to respective launcher projects. Use responsibly.</p>
+</div>
+<div class="footer-links">
+<a href="https://github.com/">GitHub</a>
+<a href="#">Discord</a>
+<a href="about.html">About / Contact</a>
+</div>
+</div>
+</footer>
+
+
+<script src="js/main.js"></script>
+</body>
+</html>
